tdf#93922 - dispose the calc InputHintWindow properly.

Change-Id: I5c331380b872429cf1fa3908c6add8de879c9ed2
Reviewed-on: https://gerrit.libreoffice.org/18927
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>