sc/source/ui/view/tabview3.cxx
@@ -662,7 +662,7 @@ bool ScTabView::HasHintWindow() const
 
 void ScTabView::RemoveHintWindow()
 {
-    mpInputHintWindow.reset();
+    mpInputHintWindow.disposeAndClear();
 }
 
 // find window that should not be over the cursor
